--- a/demo/index.html
+++ b/demo/index.html
@@ -24,9 +24,9 @@
 <body>
   <!-- header center -->
   <div class="g-navbar">
-    <div class="nav">
+    <div class="g-nav">
 
-      <!--fold-->
+
       <div class="left-fold">
         <img src="./imgs/icon-fold.svg" class="img-fold" id="btn-fold">
       </div>
@@ -35,11 +35,10 @@
         <a class="navbar-brand " href="#">
           <img src="./imgs/Biz.png" class="img-responsive">
         </a>
-        <!-- <b class="logo-font">Bizplus</b> -->
         <div class="logo-font">Bizplus</div>
       </div>
       <div class="nav-menu ">
-        <div class="navbar">
+        <div class="navbar-center">
           <div class="menu-item caps">
             Home
           </div>
@@ -142,6 +141,7 @@
       </div>
     </div>
   </div>
+  <!-- header -->
 
   <!-- main-content -->
   <div class="main-content">
@@ -215,25 +215,21 @@
     </div>
     <!-- about us -->
     <!-- section 过渡 -->
-    <div id="index--recruit--btm">
-      <div class="bg">
-        <div class="content-inner-y">
-          <div class="container color-white">
-            <div class="section-box row justify-content-center align-items-center">
-              <div class="section-text col-xl-5 col-lg-6 col-md-8">
-                <h4 class="mb20">会社説明会（新卒）</h4>
-                <p>会社説明会を開催しております。<br>選考を希望される方も、まずは会社説明会にご参加願います。<br class="d-none d-md-block">選考は説明会以降随時行っております。</p>
-              </div>
-              <div class="btn-box col-xl-2 col-md-4">
-                <div class="btn-wrap">
-                  <a class="btn ">View more</a>
-                </div>
-              </div>
+    <div class="bg">
+      <div class="content-inner">
+        <div class="section-box">
+          <div class="section-text">
+            <h3 class="title">会社説明会（新卒）</h3>
+            <p>会社説明会を開催しております。<br>選考を希望される方も、まずは会社説明会にご参加願います。
+              <br class="d-none d-md-block">選考は説明会以降随時行っております。</p>
+            <div class="btn-wrap">
+              <a class="btn">View more</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <!-- section 过渡 -->
     <!-- serve -->
     <div class="cards">
@@ -288,93 +284,6 @@
     </div>
     <!-- serve -->
     <!-- Work -->
-    <!-- <div class="cards">
-      <div class="part-title">
-        <h1 class="caps">our works</h1>
-        <hr>
-      </div>
-      <div class="work-inner">
-        <div class="work-list">
-          <div class="work-item">
-            <div class="item-img">
-              <img
-                src="./imgs/business/business-copywriter-typing-on-his-modern-laptop_free_stock_photos_picjumbo_DSC06843_free_stock_photos_picjumbo_com-1080x720.jpg"
-                alt="1">
-              <div class="mask">
-                <a href="#" class="btn-mask">MORE</a>
-              </div>
-            </div>
-            <div class="work-box">
-              <div class="box-title">由布院つばめ舎（湯布院）</div>
-              <span class="works-tag">Web広告施策</span>
-            </div>
-          </div>
-          <div class="work-item">
-            <div class="item-img ">
-              <img src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg" alt="2">
-              <div class="mask">
-                <a href="#" class="btn-mask">MORE</a>
-              </div>
-            </div>
-            <div class="work-box">
-              <div class="box-title">由布院つばめ舎（湯布院）</div>
-              <span class="works-tag">Web広告施策</span>
-            </div>
-          </div>
-          <div class="work-item">
-            <div class="item-img">
-              <img src="./imgs/business/coffee-laptop-business-work-still-life-1080x720.jpg" alt="3">
-              <div class="mask">
-                <a href="#" class="btn-mask">MORE</a>
-              </div>
-            </div>
-            <div class="work-box">
-              <div class="box-title">由布院つばめ舎（湯布院）</div>
-              <span class="works-tag">Web広告施策是是是是是是所所所所所所所所搜索 搜索 </span>
-            </div>
-          </div>
-          <div class="work-item">
-            <div class="item-img">
-              <img src="./imgs/business/team-leader-writing-on-white-board-1080x720.jpg" alt="4">
-              <div class="mask">
-                <a href="#" class="btn-mask">MORE</a>
-              </div>
-            </div>
-            <div class="work-box">
-              <div class="box-title">由布院つばめ舎（湯布院）</div>
-              <span class="works-tag">Web広告施策</span>
-            </div>
-          </div>
-          <div class="work-item">
-            <div class="item-img">
-              <img src="./imgs/business/business-free-stock-photo-1080x720.jpg" alt="5">
-              <div class="mask">
-                <a href="#" class="btn-mask">MORE</a>
-              </div>
-            </div>
-            <div class="work-box">
-              <div class="box-title">由布院つばめ舎（湯布院）</div>
-              <span class="works-tag">Web広告施策</span>
-            </div>
-          </div>
-          <div class="work-item">
-            <div class="item-img">
-              <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="6">
-              <div class="mask">
-                <a href="#" class="btn-mask">MORE</a>
-              </div>
-            </div>
-            <div class="work-box">
-              <div class="box-title">由布院つばめ舎（湯布院）</div>
-              <span class="works-tag">Web広告施策</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="fc">
-        <div><button class="btn-dark-blue caps">learn more</button></div>
-      </div>
-    </div> -->
     <div class="work">
       <div class="part-title">
         <h1 class="caps">our works</h1>
@@ -468,10 +377,10 @@
 
     <!-- Work -->
     <!-- contact -->
-    <div class="contact ">
+    <div class="contact">
       <div class="line fc z100">
         <div class="line-inner fc fw z100">
-          <div class="line-txt txt-c">
+          <div class="line-txt-l txt-c">
             <div class="txt-item">
               <h4 class="c-dark">フォームでのお問い合わせ</h4>
               <p>お見積り依頼やご相談・ご質問は
@@ -479,7 +388,7 @@
               <a href="#" class="clear-a ">お問い合わせ</a>
             </div>
           </div>
-          <div class="line-txt txt-c">
+          <div class="line-txt-r txt-c">
             <div class="txt-item">
               <h4 class="c-dark">お電話でのお問い合わせ</h4>
               <p>お急ぎの方や詳しく話を聞きたい方は
@@ -703,7 +612,7 @@
     <div class="web-end">
       <!-- map -->
       <div class="map fc">
-        <div class="map-inner ">
+        <div class="map-inner">
           <div class="map-container fc aic ">
             <div class="map-height z100">
               <div id="map"></div>
@@ -723,110 +632,103 @@
         </div>
       </div>
       <!-- double footer -->
-      <footer class="footer bg-dark-blue">
-        <div class="rel outer mxa x">
-          <section class="container mxa x rel" style="max-width:1360px;">
-            <h1 style="color:#fff;">Bizplus</h1>
-            <div class="footer__wrapper">
-              <ul class="footer__links c-white ">
-                <li>
-                  <h6 class="caps">Shop</h6>
-                  <ul class="footer__sublinks">
-                    <li><a href="#" class="h6">Wall Paint</a></li>
-                    <li><a href="#" class="h6">Trim Paint</a></li>
-                    <li><a href="#" class="h6">Ceiling Paint</a></li>
-                    <li><a href="#" class="h6">Primer</a></li>
-                    <li><a href="#" class="h6">Supplies</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <h6 class="caps">Explore</h6>
-                  <ul class="footer__sublinks">
-                    <li><a href="#" class="h6">Clare Color Genius</a></li>
-                    <li><a href="#" class="h6">Paint Calculator</a></li>
-                    <li><a href="#" class="h6">The Blog</a></li>
-                    <li><a href="#" class="h6">Paint 101</a></li>
-                    <li><a href="#" class="h6">Reviews</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <h6 class="caps">Account</h6>
-                  <ul class="footer__sublinks">
-                    <li><a href="#" class="h6">Manage Account</a></li>
-                    <li><a href="#" class="h6">My Colors</a></li>
-                    <li><a href="#" class="h6">Refer a Friend</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <h6 class="caps">Support</h6>
-                  <ul class="footer__sublinks">
-                    <li><a href="#" class="h6">FAQs</a></li>
-                    <li><a href="#" class="h6">Financing</a></li>
-                    <li><a href="#" class="h6">Contact Us</a></li>
-                    <li><a href="#" class="h6">Warranty</a></li>
-                    <li><a href="#" class="h6">Safety Information</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <h6 class="caps">Company</h6>
-                  <ul class="footer__sublinks">
-                    <li><a href="#" class="h6">Press</a></li>
-                    <li><a href="#" class="h6">Our Company</a></li>
-                    <li><a href="#" class="h6">Our Products</a></li>
-                    <li><a href="#" class="h6">Careers</a></li>
-                    <li><a href="#" class="h6">Affiliate</a></li>
-                    <li><a href="#" class="h6">Design Trade</a></li>
-                  </ul>
-                </li>
-              </ul>
-              <div class="footer__newsletter c-white x">
-                <h6 class="caps">Keep up with Bizplus</h6>
-                <p class="h6 my0 sans">A Plus For Your Business.</p>
-                <div class="rel">
-                  <form class="newsletter rel bg-dark-blue mt1 is-light">
-                    <label for="email" style="display:none">Email
-                    </label>
-                    <input type="text" class="reader x" aria-label="Email" id="email" name="email"
-                      placeholder="Your email" value="">
-                    <button type="submit" class="abs top right bottom fade-out ">
-                      <i class="fas fa-arrow-right"></i>
-                    </button>
-                  </form>
-                </div>
+      <footer class="footer bg-dark-blue fc">
+        <div class="footer-inner rel  ">
+          <h1 style="color:#fff;">Bizplus</h1>
+          <div class="footer__wrapper">
+            <ul class="footer__links c-white ">
+              <li>
+                <h6 class="caps">Shop</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="#" class="h6">Wall Paint</a></li>
+                  <li><a href="#" class="h6">Trim Paint</a></li>
+                  <li><a href="#" class="h6">Ceiling Paint</a></li>
+                  <li><a href="#" class="h6">Primer</a></li>
+                  <li><a href="#" class="h6">Supplies</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Explore</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="#" class="h6">Clare Color Genius</a></li>
+                  <li><a href="#" class="h6">Paint Calculator</a></li>
+                  <li><a href="#" class="h6">The Blog</a></li>
+                  <li><a href="#" class="h6">Paint 101</a></li>
+                  <li><a href="#" class="h6">Reviews</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Account</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="#" class="h6">Manage Account</a></li>
+                  <li><a href="#" class="h6">My Colors</a></li>
+                  <li><a href="#" class="h6">Refer a Friend</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Support</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="#" class="h6">FAQs</a></li>
+                  <li><a href="#" class="h6">Financing</a></li>
+                  <li><a href="#" class="h6">Contact Us</a></li>
+                  <li><a href="#" class="h6">Warranty</a></li>
+                  <li><a href="#" class="h6">Safety Information</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Company</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="#" class="h6">Press</a></li>
+                  <li><a href="#" class="h6">Our Company</a></li>
+                  <li><a href="#" class="h6">Our Products</a></li>
+                  <li><a href="#" class="h6">Careers</a></li>
+                  <li><a href="#" class="h6">Affiliate</a></li>
+                  <li><a href="#" class="h6">Design Trade</a></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="footer__newsletter c-white x">
+              <h6 class="caps">Keep up with Bizplus</h6>
+              <p class="h6">A Plus For Your Business.</p>
+              <div class="footer-from rel">
+                <form class="newsletter rel bg-dark-blue is-light">
+                  <input type="email" class="reader" id="email" name="email" placeholder="Your email">
+                  <button>
+                    <i class="fas fa-arrow-right fade-out"></i>
+                  </button>
+                </form>
               </div>
             </div>
-          </section>
+          </div>
         </div>
       </footer>
       <footer class="colophon bg-darkest-blue rel ">
-        <div class="rel outer mxa x">
-          <section class="container mxa x rel" style="max-width:1360px">
-            <div class="colophon__wrapper f fw jcb x">
-              <ul class="colophon__social f aic jcc x c-white">
-                <li><a class="fade-out" href="https://facebook.com/clarepaint" target="_blank">
-                    <i class="fab fa-line"></i>
-                  </a>
-                </li>
-                <li><a class="fade-out" href="https://twitter.com/clarepaint" target="_blank">
-                    <i class="fab fa-twitter-square"></i>
-                  </a></li>
-                <li><a class="fade-out" href="https://instagram.com/clarepaint" target="_blank"><i
-                      class="fab fa-facebook-square"></i></a>
-                </li>
-                <li><a class="fade-out" href="https://pinterest.com/clare_paint" target="_blank"><i
-                      class="fab fa-weixin"></i></a></li>
-              </ul>
-              <ul class="colophon__links f aic jcc fw h6 c-white x ac">
-                <li><span>©
-                    <!-- -->2019
-                    <!-- --> Clare, Inc.</span></li>
-                <li>
-                  <a href="/" class="fade-out"> Terms &amp; HZNU</a></li>
-                <li>
-                  <a href="/" class="fade-out"> Design by XQ.</a></li>
-              </ul>
-            </div>
-          </section>
+        <div class="fc rel x">
+          <div class="colophon__wrapper f fw jcb">
+            <ul class="colophon__social f aic x c-white">
+              <li><a class="fade-out" href="https://facebook.com/clarepaint" target="_blank">
+                  <i class="fab fa-line"></i>
+                </a>
+              </li>
+              <li><a class="fade-out" href="https://twitter.com/clarepaint" target="_blank">
+                  <i class="fab fa-twitter-square"></i>
+                </a></li>
+              <li><a class="fade-out" href="https://instagram.com/clarepaint" target="_blank"><i
+                    class="fab fa-facebook-square"></i></a>
+              </li>
+              <li><a class="fade-out" href="https://pinterest.com/clare_paint" target="_blank"><i
+                    class="fab fa-weixin"></i></a></li>
+            </ul>
+            <ul class="colophon__links f aic jcc fw h6 c-white x ac">
+              <li><span>©
+                  <!-- -->2019
+                  <!-- --> Clare, Inc.</span></li>
+              <li>
+                <a href="/" class="fade-out"> Terms &amp; HZNU</a></li>
+              <li>
+                <a href="/" class="fade-out"> Design by XQ.</a></li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
