--- a/demo/index.html
+++ b/demo/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="search-input">
-          <input type="text" placeholder="input here">
+          <input type="text" data-i18n-placeholder="input_here">
           <div class=""><button id="btn-search"><i class="fas fa-search"></i></button></div>
         </div>
         <div class="nav-lan">
@@ -189,12 +189,10 @@
     <!-- about us -->
     <div class="about-us">
       <div class="about-inner">
-        <b>ABOUT OUR COMPANY</b>
-        <h1>A Plus For Your Business</h1>
+        <b data-i18n-text="about_our_company"></b>
+        <h1 data-i18n-text="a_plus_for_your_business"></h1>
         <hr>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum mollitia necessitatibus neque, facilis
-          quibusdam reprehenderit? Veritatis voluptas sit esse quo aliquid possimus totam eligendi repellat, quam ipsam
-          rerum repellendus necessitatibus.</p>
+        <p data-i18n-text="introduction"></p>
         <div class="about-icon">
           <div class="about-icon-item">
             <div><img src="./imgs/svg/professional.svg"></div>
