增加业务说明i18n文字

--- a/demo/index.html
+++ b/demo/index.html
@@ -196,19 +196,19 @@
         <div class="about-icon">
           <div class="about-icon-item">
             <div><img src="./imgs/svg/professional.svg"></div>
-            <b>PROFESSION</b>
+            <b data-i18n-text="profession"></b>
           </div>
           <div class="about-icon-item">
             <div><img src="./imgs/svg/highly.svg"></div>
-            <b>EFFICIENT</b>
+            <b data-i18n-text="efficient"></b>
           </div>
           <div class="about-icon-item">
             <div><img src="./imgs/svg/nice.svg"></div>
-            <b>QUALITY</b>
+            <b data-i18n-text="quality"></b>
           </div>
         </div>
         <div class="fc">
-          <button class="btn-dark-blue caps">LEARN MORe</button>
+          <button class="btn-dark-blue caps" data-i18n-text="learn_more"></button>
         </div>
       </div>
     </div>
@@ -220,12 +220,14 @@
           <div class="container color-white">
             <div class="section-box row justify-content-center align-items-center">
               <div class="section-text col-xl-5 col-lg-6 col-md-8">
-                <h4 class="mb20">会社説明会（新卒）</h4>
-                <p>会社説明会を開催しております。<br>選考を希望される方も、まずは会社説明会にご参加願います。<br class="d-none d-md-block">選考は説明会以降随時行っております。</p>
+                <h4 data-i18n-text="rich_variety_of_technologies" class="mb20"></h4>
+                <p data-i18n-text="rich_variety_of_technologies_1"></p>
+                <p data-i18n-text="rich_variety_of_technologies_2"></p>
+                <p data-i18n-text="rich_variety_of_technologies_3"></p>
               </div>
               <div class="btn-box col-xl-2 col-md-4">
                 <div class="btn-wrap">
-                  <a class="btn ">View more</a>
+                  <a class="btn" data-i18n-text="learn_more"></a>
                 </div>
               </div>
             </div>
@@ -245,15 +247,11 @@
           <div class="serve-item">
             <div class="item-content">
               <div class="ofh">
-                <img src="./imgs/business/business-office-building-1080x720.jpg" alt="">
+                <img src="./imgs//business/credit-card-terminal-1080x720.jpg" alt="">
               </div>
               <div class="item-txt">
-                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
-                  inventore in nesciunt, rerum odit est voluptatum molestiae officiis magnam deleniti ut esse. Nobis
-                  autem sunt natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugiat
-                  doloribus, porro nihil
-                  eveniet tem!</p>
+                <h3 class="caps"><a href="#" class="clear-a" data-i18n-text="foreign_temporary_staffing_business"></a></h3>
+                <p data-i18n-text="foreign_temporary_staffing_business_summary"></p>
               </div>
             </div>
           </div>
@@ -262,20 +260,19 @@
               <div class="ofh"><img src="./imgs//business/team-leader-writing-on-white-board-1080x720.jpg" alt="">
               </div>
               <div class="item-txt">
-                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugiat doloribus, porro nihil
-                  eveniet tem!</p>
+                <h3 class="caps"><a href="#" class="clear-a" data-i18n-text="commission_proposal"></a></h3>
+                <p data-i18n-text="commission_proposal_summary"></p>
               </div>
             </div>
           </div>
           <div class="serve-item">
             <div class="item-content">
-              <div class="ofh"><img src="./imgs//business/credit-card-terminal-1080x720.jpg" alt="">
+              <div class="ofh">
+                <img src="./imgs/business/business-office-building-1080x720.jpg" alt="">
               </div>
               <div class="item-txt">
-                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugiat doloribus, porro nihil
-                  eveniet tem!</p>
+                <h3 class="caps"><a href="#" class="clear-a" data-i18n-text="other_business"></a></h3>
+                <p data-i18n-text="other_business_summary"></p>
               </div>
             </div>
           </div>
