--- a/demo/index.html
+++ b/demo/index.html
@@ -385,7 +385,7 @@
           </div>
           <div class="line-txt-r txt-c">
             <div class="txt-item">
-              <h4 class="c-dark" data-i18n-text="faq_by_tel">お電話でのお問い合わせ</h4>
+              <h4 class="c-dark" data-i18n-text="faq_by_tel"></h4>
               <p data-i18n-text="faq_by_tel_summary"></p>
               <a href="#" class="clear-a">TEL 03-6709-8260
               </a>
@@ -410,14 +410,14 @@
                   href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html" data-i18n-text="news_1_title"></a>
               </p>
               <div class="topics-date">
-                <span class="topics-tag"><span data-i18n-text="news_1_lebel"></span></span><span class="topics-time">2019.04.25</span>
+                <span class="topics-tag"><span data-i18n-text="news_1_label"></span></span><span class="topics-time">2019.04.25</span>
               </div>
             </li>
             <li>
               <p class="topics-content"><a
                   href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html" data-i18n-text="news_2_title"></a></p>
               <div class="topics-date">
-                <span class="topics-tag"><span data-i18n-text="news_2_lebel"></span></span><span class="topics-time">2019.04.25</span>
+                <span class="topics-tag"><span data-i18n-text="news_2_label"></span></span><span class="topics-time">2019.04.25</span>
               </div>
             </li>
             <li>
@@ -425,7 +425,7 @@
                   href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html" data-i18n-text="news_3_title"></a>
               </p>
               <div class="topics-date">
-                <span class="topics-tag"><span data-i18n-text="news_3_lebel"></span></span><span class="topics-time">2019.04.25</span>
+                <span class="topics-tag"><span data-i18n-text="news_3_label"></span></span><span class="topics-time">2019.04.25</span>
               </div>
             </li>
             <li>
@@ -433,7 +433,7 @@
                   href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html" data-i18n-text="news_4_title"></a>
               </p>
               <div class="topics-date">
-                <span class="topics-tag"><span data-i18n-text="news_4_lebel"></span></span><span class="topics-time">2019.04.25</span>
+                <span class="topics-tag"><span data-i18n-text="news_4_label"></span></span><span class="topics-time">2019.04.25</span>
               </div>
             </li>
             <li>
@@ -441,14 +441,14 @@
                   href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html" data-i18n-text="news_5_title"></a>
               </p>
               <div class="topics-date">
-                <span class="topics-tag"><span data-i18n-text="news_5_lebel"></span></span> <span class="topics-time">2019.04.25</span>
+                <span class="topics-tag"><span data-i18n-text="news_5_label"></span></span> <span class="topics-time">2019.04.25</span>
               </div>
             </li>
             <li>
           </ul>
         </div>
         <div class="fc">
-          <div><button class="btn-dark-blue caps" data-i18n-text="learn_more">learn more</button></div>
+          <div><button class="btn-dark-blue caps" data-i18n-text="learn_more"></button></div>
         </div>
       </div>
     </div>
@@ -456,7 +456,7 @@
     <!-- event/blog 公司文化 -->
     <div class="event">
       <div class="part-title">
-        <h1 class="caps">our events / blog</h1>
+        <h1 class="caps" data-i18n-text="our_events_blog"></h1>
         <hr>
       </div>
       <ul class="event_ul">
@@ -528,7 +528,7 @@
     <!-- Team -->
     <div class="cards">
       <div class="part-title">
-        <h1 class="caps">our team</h1>
+        <h1 class="caps" data-i18n-text="our_team"></h1>
         <hr>
       </div>
       <div class="team fc">
@@ -542,12 +542,8 @@
                 </div>
               </div>
               <div class="item-text">
-                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
-                  inventore in nesciunt, rerum odit est voluptatum molestiae officiis magnam deleniti ut esse. Nobis
-                  autem sunt natus
-                  doloribus, porro nihil
-                  eveniet tem!</p>
+                <h3 class="caps"><a href="#" class="clear-a" data-i18n-text="team_1_title"></a></h3>
+                <p data-i18n-text="team_1_content"></p>
               </div>
             </div>
           </div>
@@ -562,11 +558,8 @@
                 </div>
               </div>
               <div class="item-text">
-                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
-                  in
-                  doloribus, porro nihil
-                  eveniet tem!</p>
+                <h3 class="caps"><a href="#" class="clear-a" data-i18n-text="team_2_title"></a></h3>
+                <p data-i18n-text="team_2_content"></p>
               </div>
             </div>
           </div>
@@ -579,19 +572,15 @@
                 </div>
               </div>
               <div class="item-text">
-                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
-                  inventore in neofficiis magnam deleniti ut esse. Nobis
-                  autem sun
-                  doloribus, porro nihil
-                  eveniet tem!</p>
+                <h3 class="caps"><a href="#" class="clear-a" data-i18n-text="team_3_title"></a></h3>
+                <p data-i18n-text="team_3_content"></p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="fc">
-        <div><button class="btn-dark-blue caps">learn more</button></div>
+        <div><button class="btn-dark-blue caps" data-i18n-text="learn_more"></button></div>
       </div>
     </div>
     <!-- Team -->
@@ -607,13 +596,13 @@
           </div>
           <div class="map-content z100">
             <div class="content-text z100">
-              <h2>公司所在地</h2>
-              <p>東京都新宿区富久町1番5号</p>
-              <p>富久町第5服部ビル2階</p>
-              <b>TEL : 03-6709-8260</b>
+              <h2 data-i18n-text="address"></h2>
+              <p data-i18n-text="address_1"></p>
+              <p data-i18n-text="address_2"></p>
+              <b data-i18n-text="tel"></b>
               <br>
-              <b>FAX : 03-6709-8261</b>
-              <div><a href="#" class="caps clear-a">info</a></div>
+              <b data-i18n-text="fax"></b>
+              <div><a href="#" class="caps clear-a" data-i18n-text="info"></a></div>
             </div>
           </div>
         </div>
@@ -625,23 +614,25 @@
           <div class="footer__wrapper">
             <ul class="footer__links c-white ">
               <li>
-                <h6 class="caps">Shop</h6>
+                <h6 class="caps" data-i18n-text="information"></h6>
                 <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Wall Paint</a></li>
-                  <li><a href="#" class="h6">Trim Paint</a></li>
-                  <li><a href="#" class="h6">Ceiling Paint</a></li>
-                  <li><a href="#" class="h6">Primer</a></li>
-                  <li><a href="#" class="h6">Supplies</a></li>
+                  <li><a href="#" class="h6" data-i18n-text="company_profile"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="business_philosophy"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="representative_s_greetings"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="privacy_policy"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="organizational_chart"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="access"></a></li>
                 </ul>
               </li>
               <li>
-                <h6 class="caps">Explore</h6>
+                <h6 class="caps" data-i18n-text="business_field"></h6>
                 <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Clare Color Genius</a></li>
-                  <li><a href="#" class="h6">Paint Calculator</a></li>
-                  <li><a href="#" class="h6">The Blog</a></li>
-                  <li><a href="#" class="h6">Paint 101</a></li>
-                  <li><a href="#" class="h6">Reviews</a></li>
+                  <li><a href="#" class="h6" data-i18n-text="business_summary"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="business_philosophy"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="representative_s_greetings"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="privacy_policy"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="organizational_chart"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="access"></a></li>
                 </ul>
               </li>
               <li>
