--- a/demo/index.html
+++ b/demo/index.html
@@ -628,41 +628,28 @@
                 <h6 class="caps" data-i18n-text="business_field"></h6>
                 <ul class="footer__sublinks">
                   <li><a href="#" class="h6" data-i18n-text="business_summary"></a></li>
-                  <li><a href="#" class="h6" data-i18n-text="business_philosophy"></a></li>
-                  <li><a href="#" class="h6" data-i18n-text="representative_s_greetings"></a></li>
-                  <li><a href="#" class="h6" data-i18n-text="privacy_policy"></a></li>
-                  <li><a href="#" class="h6" data-i18n-text="organizational_chart"></a></li>
-                  <li><a href="#" class="h6" data-i18n-text="access"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="quality_control"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="project_management"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="development_language_and_environment"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="foreign_temporary_staffing_business"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="commission_proposal"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="other_business"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="development_performance"></a></li>
                 </ul>
               </li>
               <li>
-                <h6 class="caps">Account</h6>
+                <h6 class="caps" data-i18n-text="company_culture"></h6>
                 <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Manage Account</a></li>
-                  <li><a href="#" class="h6">My Colors</a></li>
-                  <li><a href="#" class="h6">Refer a Friend</a></li>
+                  <li><a href="#" class="h6" data-i18n-text="welfare"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="leisure_and_entertainment"></a></li>
+                  <li><a href="#" class="h6" data-i18n-text="medical_insurance"></a></li>
                 </ul>
               </li>
               <li>
-                <h6 class="caps">Support</h6>
-                <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">FAQs</a></li>
-                  <li><a href="#" class="h6">Financing</a></li>
-                  <li><a href="#" class="h6">Contact Us</a></li>
-                  <li><a href="#" class="h6">Warranty</a></li>
-                  <li><a href="#" class="h6">Safety Information</a></li>
-                </ul>
+                <h6 class="caps" data-i18n-text="recruitment_information"></h6>
               </li>
               <li>
-                <h6 class="caps">Company</h6>
-                <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Press</a></li>
-                  <li><a href="#" class="h6">Our Company</a></li>
-                  <li><a href="#" class="h6">Our Products</a></li>
-                  <li><a href="#" class="h6">Careers</a></li>
-                  <li><a href="#" class="h6">Affiliate</a></li>
-                  <li><a href="#" class="h6">Design Trade</a></li>
-                </ul>
+                <h6 class="caps" data-i18n-text="company_culture"></h6>
               </li>
             </ul>
             <div class="footer__newsletter c-white x">
