--- a/demo/index.html
+++ b/demo/index.html
@@ -602,7 +602,7 @@
               <b data-i18n-text="tel"></b>
               <br>
               <b data-i18n-text="fax"></b>
-              <div><a href="#" class="caps clear-a" data-i18n-text="info"></a></div>
+              <div><a href="#" class="caps clear-a" data-i18n-text="more"></a></div>
             </div>
           </div>
         </div>
@@ -649,7 +649,7 @@
                 <h6 class="caps" data-i18n-text="recruitment_information"></h6>
               </li>
               <li>
-                <h6 class="caps" data-i18n-text="company_culture"></h6>
+                <h6 class="caps" data-i18n-text="contact_us"></h6>
               </li>
             </ul>
             <div class="footer__newsletter c-white x">
