--- a/demo/index.html
+++ b/demo/index.html
@@ -110,27 +110,51 @@
 
   <div class="second-menu">
 
-    <div class="second-menu-item">
-      <span>Information
-        <i class="fas fa-angle-down svg-down"></i>
-      </span>
-    </div>
-
-    <div class="second-menu-item">
-      <span>Profile
-        <i class="fas fa-angle-down svg-down"></i>
-      </span>
-    </div>
-
-    <div class="second-menu-item">
-      <span>Benefit
-        <i class="fas fa-angle-down svg-down"></i>
-      </span>
-    </div>
-
-    <div class="second-menu-item">Recruitment</div>
-
-    <div class="second-menu-item">About</div>
+    <div class="second-menu-item caps" data-i18n-text="homepage"></div>
+          <div class="second-menu-item caps expand">
+            <span data-i18n-text-left="information">
+              <i class="fas fa-angle-down svg-down"></i>
+            </span>
+            <div class="second-menu-information"></div>
+            <ul>
+              <li><a href="#" data-i18n-text-right="company_profile"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="business_philosophy"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="representative_s_greetings"><i class="fas fa-arrow-right"></i></a>
+              </li>
+              <li><a href="#" data-i18n-text-right="privacy_policy"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="organizational_chart"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="access"><i class="fas fa-arrow-right"></i></a></li>
+            </ul>
+          </div>
+          <div class="second-menu-item caps expand">
+            <span data-i18n-text-left="business_field">
+              <i class="fas fa-angle-down svg-down"></i>
+            </span>
+            <ul>
+              <li><a href="#" data-i18n-text-right="business_summary"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="quality_control"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="development_language_and_environment"><i
+                    class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="foreign_temporary_staffing_business"><i
+                    class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="commission_proposal"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="other_business"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="development_performance"><i class="fas fa-arrow-right"></i></a></li>
+            </ul>
+          </div>
+          <div class="second-menu-item caps expand">
+            <span data-i18n-text-left="company_culture">
+              <i class="fas fa-angle-down svg-down"></i>
+            </span>
+            <ul>
+              <li><a href="#" data-i18n-text-right="welfare"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="leisure_and_entertainment"><i class="fas fa-arrow-right"></i></a>
+              </li>
+              <li><a href="#" data-i18n-text-right="medical_insurance"><i class="fas fa-arrow-right"></i></a></li>
+            </ul>
+          </div>
+          <div class="second-menu-item caps" data-i18n-text="recruitment_information"></div>
+          <div class="second-menu-item caps" data-i18n-text="contact_us"></div>
 
     <div class="second-menu-nav">
       <div class="nav-search">
